[PCFG-32] test junit
