# openapi/swagger.json
@@ -4,7 +4,7 @@
     "description": "Spring Application exposes Api to manage configuration for EC/PSP on the Nodo dei Pagamenti",
     "termsOfService": "https://www.pagopa.gov.it/",
     "title": "PagoPA API configuration",
-    "version": "0.2.26"
+    "version": "0.2.28"
   },
   "host": "127.0.0.1:8080",
   "basePath": "/apiconfig/api/v1",
@@ -430,6 +430,122 @@
         ],
         "operationId": "getBrokerPsp",
         "summary": "Get creditor broker details "
+      }
+    },
+    "/cdis": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "default": 50,
+            "description": "Number of elements on one page. Default = 50",
+            "format": "int32",
+            "in": "query",
+            "name": "limit",
+            "required": false,
+            "type": "integer"
+          },
+          {
+            "description": "Page number. Page value starts from 0",
+            "format": "int32",
+            "in": "query",
+            "name": "page",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK.",
+            "schema": {
+              "$ref": "#/definitions/Cdis"
+            }
+          },
+          "403": {
+            "description": "Forbidden client error status."
+          },
+          "429": {
+            "description": "Too many requests"
+          },
+          "500": {
+            "description": "Service unavailable.",
+            "schema": {
+              "$ref": "#/definitions/ProblemJson"
+            }
+          }
+        },
+        "security": [
+          {
+            "ApiKey": []
+          },
+          {
+            "Authorization": []
+          }
+        ],
+        "tags": [
+          "Payment Service Providers"
+        ],
+        "operationId": "getCdis",
+        "summary": "Get paginated list of CDIs"
+      }
+    },
+    "/cdis/{idcdi}": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "description": "Id of a CDI",
+            "in": "path",
+            "maxLength": 50,
+            "minLength": 0,
+            "name": "idcdi",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK.",
+            "schema": {
+              "$ref": "#/definitions/Cdi"
+            }
+          },
+          "403": {
+            "description": "Forbidden client error status."
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/ProblemJson"
+            }
+          },
+          "429": {
+            "description": "Too many requests"
+          },
+          "500": {
+            "description": "Service unavailable.",
+            "schema": {
+              "$ref": "#/definitions/ProblemJson"
+            }
+          }
+        },
+        "security": [
+          {
+            "ApiKey": []
+          },
+          {
+            "Authorization": []
+          }
+        ],
+        "tags": [
+          "Payment Service Providers"
+        ],
+        "operationId": "getCdi",
+        "summary": "Get CDI details "
       }
     },
     "/channels": {
@@ -2427,6 +2543,58 @@
       "required": [
         "brokers_psp_list",
         "page_info"
+      ],
+      "type": "object"
+    },
+    "Cdi": {
+      "properties": {
+        "business_name": {
+          "example": "Comune di Lorem Ipsum",
+          "type": "string"
+        },
+        "id_cdi": {
+          "example": "223344556677889900",
+          "type": "string"
+        },
+        "psp_code": {
+          "example": "1234567890100",
+          "maxLength": 35,
+          "minLength": 0,
+          "type": "string"
+        },
+        "publication_date": {
+          "example": "2021-10-08T14:55:16.302Z",
+          "format": "date-time",
+          "type": "string"
+        },
+        "validity_date": {
+          "example": "2021-10-08T14:55:16.302Z",
+          "format": "date-time",
+          "type": "string"
+        }
+      },
+      "required": [
+        "business_name",
+        "id_cdi",
+        "psp_code"
+      ],
+      "type": "object"
+    },
+    "Cdis": {
+      "properties": {
+        "page_info": {
+          "$ref": "#/definitions/PageInfo"
+        },
+        "services": {
+          "items": {
+            "$ref": "#/definitions/Cdi"
+          },
+          "type": "array"
+        }
+      },
+      "required": [
+        "page_info",
+        "services"
       ],
       "type": "object"
     },
